--- a/server/views/index.html
+++ b/server/views/index.html
@@ -18,12 +18,12 @@
 </nav>
 <h1 style="color: #fff0f0;text-align: center;width: 100%;">Index Home</h1>
 <div class="btn-group-lg" role="group" aria-label="Large button group" style="text-align: center;margin-top: 100px;">
-    <button type="button" class="btn btn-default"><a href="/chats/live/1">live 1 </a></button>
-    <button type="button" class="btn btn-default"><a href="/chats/live/3">live 3</a></button>
+    <button type="button" class="btn btn-default"><a href="/chats/live/1">时尚 1 </a></button>
+    <button type="button" class="btn btn-default"><a href="/chats/live/3">时尚 3</a></button>
 </div>
 <div class="btn-group-lg" role="group" aria-label="Large button group" style="text-align: center;margin-top: 100px;">
-    <button type="button" class="btn btn-default"><a href="/chats/wechat/6">chat 6 </a></button>
-    <button type="button" class="btn btn-default"><a href="/chats/wechat/4">chat 4</a></button>
+    <button type="button" class="btn btn-default"><a href="/chats/wechat/6">鬼畜 6 </a></button>
+    <button type="button" class="btn btn-default"><a href="/chats/wechat/4">鬼畜 4</a></button>
 </div>
 </body>
 c
